[package]
name = "ages_api"
version = "0.1.0"
authors = ["Emmanuel Bosquet <bjokac@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-rt = "1.1.1" # for the #[actix_rt::main] macro
actix-service = "1.0.5"
actix-web = "2.0.0"
anyhow = "1.0.44"
bcrypt = "0.8.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.7"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
envconfig = "0.10.0"
env_logger = "0.7.1"
failure = "0.1.8"
futures = "0.3.5"
jsonwebtoken = "7.1.0"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4.8"
r2d2 = "0.8"
serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.111"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
